# c1_ec2

./: README.md  main.py  pyproject.toml
company.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pygbm/: cli.py  gbm.py
pygbm.egg-info/: PKG-INFO  SOURCES.txt
warmup/: 1_1.py  1_3.py  1_4.py  1_5.py  1_6.py  1_7.py
