[build-system]
requires = ["setuptools", "wheel", "setuptools-scm"] #Build requirements
build-backend = "setuptools.build_meta"

[project]
name = "pygbm" # name of the package must match the core folder name
dynamic = ["version"]
description = "A Python package for modeling geometric brownmian motion"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Govind Rao", email = "govindniravrao@gmail.com" }
]

# Runtime dependencies
[tool.poetry.dependencies]
numpy = "^1.26.4"
matplotlib = "^3.9.2"

[project.urls]
"Documentation" = "https://your-readthedocs-url-here"
"Source" = "https://github.com/govindnirav/c1_ec2.git"
"Issues" = "https://github.com/govindnirav/c1_ec2.git/issues"


[tool.setuptools_scm]
write_to = "pygbm/version.py"  # Where to write the dynamic version

[tool.setuptools.packages.find]
where = ["."]